fix booking on mobile

--- a/src/components/HeroBooking/HeroBooking.module.scss
+++ b/src/components/HeroBooking/HeroBooking.module.scss
@@ -45,6 +45,10 @@
 
 @media screen and (max-width: 480px) {
 
+  .herobooking__logo {
+    padding-top: 0.3rem;
+  }
+
   .herobooking {
     text-align: center;
 
@@ -58,6 +62,7 @@
     h1 {
       font-size: 2rem;
       line-height: 2.5rem;
+      margin-top: 1.25rem;
     }
 
     p {
